--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -9162,6 +9162,26 @@ a {
   color: #232323;
 }
 
+.cid-uPSAmxCXws .mbr-iconfont-social {
+  margin: 0.5rem;
+  font-size: 32px;
+  display: flex;
+  border-radius: 50%;
+  text-align: center;
+  color: #e6c63b;
+  border: 2px solid #e6c63b;
+  justify-content: center;
+  align-content: center;
+  transition: all 0.3s;
+}
+.cid-uPSAmxCXws .mbr-iconfont-social:before {
+  padding: 0.6rem;
+}
+.cid-uPSAmxCXws .mbr-iconfont-social:hover {
+  background-color: #e6c63b;
+  color: #000000;
+}
+
 .cid-uOu6qVrr4C {
   padding-top: 0rem;
   padding-bottom: 0rem;
