--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -9164,11 +9164,12 @@ a {
 
 
 .cid-uPSAmxCXws .bg-behance {
-  background: #0056ff;
+  background: #e6c63b;
   color: #ffffff;
 }
 .cid-uPSAmxCXws .bg-behance:hover {
-  background: #0045cc;
+  background: #000000;
+  color: #e6c63b;
 }
 .cid-uPSAmxCXws .iconfont-wrapper {
   display: inline-block;
